-
Type:
Bug
-
Resolution: Done
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Testing Infrastructure
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
A large function call parameter or exception catch statement is passed by value
Defect 73620 (STATIC_C)
Checker PASS_BY_VALUE (subcategory none)
File: /src/mongo/s/chunk.cpp
Function mongo::Chunk::Chunk(mongo::OperationContext *, const mongo::ChunkManager *, mongo::ChunkType)
/src/mongo/s/chunk.cpp, line: 162
Passing parameter from of type "mongo::ChunkType" (size 136 bytes) by value.
Chunk::Chunk(OperationContext* txn, const ChunkManager* manager, ChunkType from)