SERVER-20131 Take ChunkType by reference in Chunk constructor